--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,8 @@
 	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="19" />
 	<application
 		 android:label="@string/app_name"
-		 android:icon="@drawable/launcher">
+		 android:icon="@drawable/launcher"
+		 android:theme="@style/HomebrewTheme">
 		<activity
 			 android:name="com.jaylecavalier.decimaltobinary.MainActivity"
 			 android:label="@string/app_name"
